@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false



skinparam classAttributeIconSize 0

hide circle
hide methods


class SystemUser {
    name
    email
    password
    phone

}
class GSM {

}


class Agenda {
}

class AgendaEntry {
    date
    associatedTeam
    associatedVehicleList
}



class ToDoEntry{
    description
         greenSpace
         expectedDuration
         degreeUrgency
         entryStatus
}

Agenda "1" -- "*" AgendaEntry : has >
SystemUser <|- GSM
GSM "1" -- "*" AgendaEntry: manages >
AgendaEntry --|> ToDoEntry
@enduml